# Resty-Client

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: CHANGELOG.md
examples/: crud.py  main.py  middlewares.py  requests.py
examples/app/: main.py  managers.py  schemas.py
examples/crud/: main.py  serializers.py
examples/crud_many_layers/: managers.py  schemas.py  serializers.py
examples/middlewares/: django.py
examples/product_crud/: main.py
examples/serializer_schemas/: schemas.py  serializers.py
resty/: __init__.py  __version__.py  constants.py  enums.py  exceptions.py  types.py
resty/clients/: __init__.py  types.py
resty/clients/httpx/: __init__.py  client.py  clients.py
resty/ext/django/middlewares/: __init__.py  pagination.py
resty/ext/django/middlewares/pagination/: __init__.py  constants.py  middlewares.py
resty/managers/: __init__.py  builders.py  manager.py  managers.py  types.py
resty/middlewares/: __init__.py  filter.py  manager.py  managers.py  pagination.py  status.py  types.py
resty/middlewares/django/: __init__.py  pagination.py
resty/requests/: request.py
resty/responses/: __init__.py  response.py
resty/serializers/: __init__.py  serializer.py  serializers.py  types.py
tests/clients/: conftest.py  test_httpx_client.py
tests/ext/django/: test_django_pagination_middlewares.py
tests/managers/: conftest.py  test_manager.py  test_url_builder.py
tests/middlewares/: test_middleware_manager.py  test_status_checking_middleware.py
tests/resty/managers/: conftest.py  test_manager.py
tests/resty/serializers/: test_serializer.py
tests/serializers/: test_serializer.py
