[tool.poetry]
name = "resty-client"
version = "0.0.4"
description = "RestyClient is a simple, easy-to-use Python library for interacting with REST APIs using Pydantic's powerful data validation and deserialization tools."
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "resty" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
httpx = "^0.26.0"
black = "^24.4.0"
coverage = "^7.5.0"
pytest-asyncio = "^0.23.6"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]

[tool.mypy]
files = ["resty"]
show_error_codes = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
